# Gamepad_Tester

./: .gitignore  CMakeLists.txt  GUI.cpp  GUI.h  GamepadManager.cpp  GamepadManager.h  Gamepad_Tester.kdev4  LICENSE.txt  README.md  TextureLoader.cpp  TextureLoader.h  Window.cpp  Window.h  build_release.sh  controller_icon.h  main.cpp
.github/workflows/: release.yml
assets/: gamepad_tester.desktop
